Map align issue

--- a/css/style.css
+++ b/css/style.css
@@ -2411,7 +2411,7 @@ img {
   /* padding: 4%; */
   flex-grow: 0;
   flex-shrink: 1;
-  width: 240px;
+  width: 100%;
   height: 51px;
   background-color: rgba(22, 171, 228, 1);
   border-radius: 88.28451538085938px;
@@ -2447,7 +2447,7 @@ img {
   flex-shrink: 1;
   background-color: rgba(22, 171, 228, 1);
   border-radius: 88.28451538085938px;
-  width: 240px;
+  width: 100%;
   height: 51px;
 }
 
